--- a/base.html
+++ b/base.html
@@ -14,14 +14,13 @@
       rel="stylesheet" 
       href="{{ url_for('static', filename='style.css') }}"
     >
-    <title>{% block title %}PLATO5  Meet Someone New{% endblock %}</title>
+    <title>{% block title %}--Your Site Name--{% endblock %}</title>
     
   </head>
 
   <body>
 
       <div id="logoBtnBox">
-          <div class="logo"><h1><a href="/dashboard">PLATO<span style="color: blueviolet;">5</a></h1></div>
       </div>
 
       <div>
@@ -48,9 +47,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-      {% endif %} {% endfor %} {% endif %} {% endwith %}
-      <svg id="wave" style="z-index:0; opacity: .6;  position:fixed; left:0; bottom: 0; rotate(0deg); transition: 0.3s" viewBox="0 0 1440 490" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(255, 111, 145, 1)" offset="0%"></stop><stop stop-color="rgba(138, 43, 226, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,441L34.3,441C68.6,441,137,441,206,392C274.3,343,343,245,411,187.8C480,131,549,114,617,138.8C685.7,163,754,229,823,212.3C891.4,196,960,98,1029,65.3C1097.1,33,1166,65,1234,98C1302.9,131,1371,163,1440,163.3C1508.6,163,1577,131,1646,122.5C1714.3,114,1783,131,1851,163.3C1920,196,1989,245,2057,285.8C2125.7,327,2194,359,2263,334.8C2331.4,310,2400,229,2469,171.5C2537.1,114,2606,82,2674,73.5C2742.9,65,2811,82,2880,89.8C2948.6,98,3017,98,3086,138.8C3154.3,180,3223,261,3291,285.8C3360,310,3429,278,3497,285.8C3565.7,294,3634,343,3703,310.3C3771.4,278,3840,163,3909,122.5C3977.1,82,4046,114,4114,171.5C4182.9,229,4251,310,4320,294C4388.6,278,4457,163,4526,163.3C4594.3,163,4663,278,4731,318.5C4800,359,4869,327,4903,310.3L4937.1,294L4937.1,490L4902.9,490C4868.6,490,4800,490,4731,490C4662.9,490,4594,490,4526,490C4457.1,490,4389,490,4320,490C4251.4,490,4183,490,4114,490C4045.7,490,3977,490,3909,490C3840,490,3771,490,3703,490C3634.3,490,3566,490,3497,490C3428.6,490,3360,490,3291,490C3222.9,490,3154,490,3086,490C3017.1,490,2949,490,2880,490C2811.4,490,2743,490,2674,490C2605.7,490,2537,490,2469,490C2400,490,2331,490,2263,490C2194.3,490,2126,490,2057,490C1988.6,490,1920,490,1851,490C1782.9,490,1714,490,1646,490C1577.1,490,1509,490,1440,490C1371.4,490,1303,490,1234,490C1165.7,490,1097,490,1029,490C960,490,891,490,823,490C754.3,490,686,490,617,490C548.6,490,480,490,411,490C342.9,490,274,490,206,490C137.1,490,69,490,34,490L0,490Z"></path></svg>
-        
+      {% endif %} {% endfor %} {% endif %} {% endwith %} 
       <div id="quizDrop" class="holder">{% block content %} {% endblock %}</div>
 
       <div class="holder" style="position: absolute; top: 120%; left: 0%;">
