--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}PLATO5 Dashboard{% endblock %} {% block content
+{% extends "base.html" %} {% block title %}Dashboard{% endblock %} {% block content
     %}
 
     <div class="glassmorphismBoxDashboard">
