--- a/sign-up.html
+++ b/sign-up.html
@@ -3,7 +3,7 @@
 <div class="glassmorphismBox">
 
     <form method="POST">
-      <label for="">Welcome to PLATO<span style="color: blueviolet;">5</span><br><br>Start an Account and Take the Quiz</label>
+      <label for="">Welcome to the Authentication System<br><br>Start an Account and Take the Quiz</label>
         <br><br>
         <a href="/login" class="flipBtn">Login Instead</a>
         <br><br>
@@ -94,65 +94,5 @@
 
 <br><br>
 
-<div class="glassmorphismBoxArticle">
-  <div class="gridContainer">
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>Staying Safe Online</h3>
-        </span>
-      </div>
-    </div>
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>Being Responsible with Meetups</h3>
-        </span>
-      </div>
-    </div>
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>Getting to Know PLATO5</h3>
-        </span>
-      </div>
-    </div>
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>The Social Engine Vs. Social Media</h3>
-        </span>
-      </div>
-    </div>
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>Explaining the Big 5 Personality Traits</h3>
-        </span>
-      </div>
-    </div>
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>Assessing the Compatibility of Users (Machine Learning)</h3>
-        </span>
-      </div>
-    </div>
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>Exporting Your Persona to the Blockchain</h3>
-        </span>
-      </div>
-    </div>
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>About Our Team - Contact Us (Aurum Tech LLC)</h3>
-        </span>
-      </div>
-    </div>  
-  </div>
-</div>
 
 {% endblock %}
