--- a/login.html
+++ b/login.html
@@ -1,9 +1,7 @@
-{% extends "base.html" %} {% block title %}PLATO5   Meet Someone New{% endblock %} {% block content
+{% extends "base.html" %} {% block title %}{% endblock %} {% block content
     %}
 <div class="glassmorphismBox">
     <form method="POST">
-      <label for="">Welcome to PLATO<span style="color: blueviolet;">5</span><br>Login Below</label>
-        <br><br>
         <a href="/sign-up" class="flipBtn">Sign Up Instead</a>
         <br><br>
             
@@ -41,84 +39,6 @@
     >Meet Someone New
     </button>
   </form>
-</div>
-
-<br><br>
-
-<!--/*
-articles: 
-Staying Safe Online, 
-Being Responsible With Meetups,
-Getting to know PLATO5, 
-The SOCIAL ENGINE Vs. Social Media, 
-Explaining the Big Five Personality Traits,
-Assessing the Compatibility of Users (Machine Learning),
-Exporting PERSONA to the Blockchain,
-About Our Team (AURUM TECH LLC)
-MORE ARTICLES 
-------->
-
-
-<div class="glassmorphismBoxArticle">
-  <div class="gridContainer">
-    <div>
-      <div class="articleBox">
-        
-        <span>
-          <h3>Staying Safe Online</h3>
-        </span>
-      </div>
-    </div>
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>Being Responsible with Meetups</h3>
-        </span>
-      </div>
-    </div>
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>Getting to Know PLATO5</h3>
-        </span>
-      </div>
-    </div>
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>The Social Engine Vs. Social Media</h3>
-        </span>
-      </div>
-    </div>
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>Explaining the Big 5 Personality Traits</h3>
-        </span>
-      </div>
-    </div>
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>Assessing the Compatibility of Users (Machine Learning)</h3>
-        </span>
-      </div>
-    </div>
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>Exporting Your Persona to the Blockchain</h3>
-        </span>
-      </div>
-    </div>
-    <div>
-      <div class="articleBox">
-        <span>
-          <h3>About Our Team - Contact Us (Aurum Tech LLC)</h3>
-        </span>
-      </div>
-    </div>  
-  </div>
 </div>
 
 {% endblock %}
